--- a/back/public/index.html
+++ b/back/public/index.html
@@ -10,6 +10,9 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" href="/wine.ico">
     <link rel="stylesheet" href="/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400i|Merriweather&display=swap"
+        rel="stylesheet">
     <title>WINERY</title>
 </head>
 
